<resources>
    <string name="app_name">QRFood</string>
    <string name="sign_out">Sign Out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scan_qr_code">Scan QR Code</string>
    <string name="past_orders">Past Orders</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact Us</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="scan_a_qr_code">Scan a QR code</string>
    <string name="userimage">userImage</string>
    <string name="restaurants_around_you">Restaurants around you</string>

</resources>
