<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_qrcode_scan_black_24dp"
            android:title="@string/scan_qr_code" />
        <item
            android:id="@+id/nav_past_orders"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/past_orders" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_mail_black_24dp"
                android:title="@string/contact_us" />
        </menu>
    </item>

</menu>
